[package]
name = "tarply"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
bincode = "1.3.3"
eyre = "0.6.8"
library = "0.0.2"
log = "0.4.17"
md5 = "0.7.0"
serde = "1.0.157"
serde_with = "2.3.1"
tar = "0.4.38"
xz = "0.1.0"
